fixed spacing

--- a/src/shared/components/event-program/event-program.module.scss
+++ b/src/shared/components/event-program/event-program.module.scss
@@ -5,7 +5,7 @@
     display: flex;
     div {
       width: 33.3333%;
-      padding: var(--spacing-small) var(--spacing-medium);
+      padding: var(--spacing-small) var(--spacing-small);
     }
 
     .label {
@@ -18,7 +18,7 @@
     .event {
       width: 33.3333%;
       border-right: 1px solid #444444;
-      padding: 0 var(--spacing-medium);
+      padding: 0 var(--spacing-small);
 
       &:last-child {
         border-right: 0;
